--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dom": "^0.0.3",
     "framer-motion": "^11.2.10",
+    "lucide-react": "^0.390.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "router": "^1.3.8"
+    "redux": "^5.0.1",
+    "router": "^1.3.8",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
